# Degate

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOWNLOADS_SECURITY.md  README  README.md  README.rst  README.txt  ROADMAP.md  SECURITY.md  VERSION  changelog  degate.desktop  degate_debug.sh  degate_start.sh  vcpkg.json
gui/: AnnotationListWin.cc  AnnotationListWin.h  AppHelper.cc  AppHelper.h  CMakeLists.txt  ConnectionInspectorWin.cc  ConnectionInspectorWin.h  DRCViolationsWin.cc  DRCViolationsWin.h  DegateRenderer.cc  DegateRenderer.h  Editor.h  ExternalMatchingGUI.cc  ExternalMatchingGUI.h  GateConfigWin.cc  GateConfigWin.h  GateListWin.cc  GateListWin.h  GateRenderer.cc  GateRenderer.h  GateSelectWin.cc  GateSelectWin.h  GenericTextInputWin.cc  GenericTextInputWin.h  GladeFileLoader.cc  GladeFileLoader.h  GridConfigWin.cc  GridConfigWin.h  HlObjectSet.cc  HlObjectSet.h  ImageWin.cc  ImageWin.h  InProgressWin.cc  InProgressWin.h  LayerConfigWin.cc  LayerConfigWin.h  MainWin.cc  MainWin.h  MenuManager.cc  MenuManager.h  (+49 more)
gui/glade/: annotation_list.glade  connection_inspector.glade  drc_violations_list.glade  gate_create.glade  gate_list.glade  gate_select.glade  generic_text_input.glade  grid_config.glade  layer_config.glade  module_hierarchy.glade  placement_checker.glade  port_colors.glade  port_select.glade  project_settings.glade  rc_violations_list.glade  select_module.glade  set_orientation.glade  snapshot_list.glade  template_matching_params.glade  terminal.glade  via_matching_params.glade  wire_matching_params.glade
gui/icons/degate_splash.graffle/: data.plist
lib/: AbstractShape.h  AnalyzeWireGradient.h  Annotation.cc  Annotation.h  AutoNameGates.cc  AutoNameGates.h  BackgroundClassifier.h  BinaryLineDetection.cc  BinaryLineDetection.h  BoundingBox.cc  BoundingBox.h  CMakeLists.txt  CannyEdgeDetection.cc  CannyEdgeDetection.h  Circle.cc  Circle.h  CodeTemplateGenerator.cc  CodeTemplateGenerator.h  ColoredObject.h  Configuration.cc  Configuration.h  Configuration.h.in  ConnectedLogicModelObject.cc  ConnectedLogicModelObject.h  DOTAttributes.cc  DOTAttributes.h  DOTExporter.cc  DOTExporter.h  DRCBase.h  DRCNet.cc  DRCNet.h  DRCOpenPorts.cc  DRCOpenPorts.h  DRCVBlacklistExporter.cc  DRCVBlacklistExporter.h  DRCVBlacklistImporter.cc  DRCVBlacklistImporter.h  DRCVContainer.cc  DRCVContainer.h  DRCViolation.h  (+186 more)
libtest/: CMakeLists.txt  FileSystemTest.cc  FileSystemTest.h  GateLibraryExporterTest.cc  GateLibraryExporterTest.h  GateLibraryImporterTest.cc  GateLibraryImporterTest.h  ImageProcessingTest.cc  ImageProcessingTest.h  ImageTest.cc  ImageTest.h  LMOinQTreeTest.cc  LMOinQTreeTest.h  LogicModelDOTExporterTest.cc  LogicModelDOTExporterTest.h  LogicModelExporterTest.cc  LogicModelExporterTest.h  LogicModelImporterTest.cc  LogicModelImporterTest.h  LogicModelTest.cc  LogicModelTest.h  LookupSubcircuitTest.cc  LookupSubcircuitTest.h  MemoryMapTest.cc  MemoryMapTest.h  ProjectExporterTest.cc  ProjectExporterTest.h  ProjectImporterTest.cc  ProjectImporterTest.h  QuadTreeTest.cc  QuadTreeTest.h  ScalingManagerTest.cc  ScalingManagerTest.h  ShapeTest.cc  ShapeTest.h  main.cc
src/: Annotation.cc  AnnotationEditDialog.cc  AutoNameGates.cc  BoundingBox.cc  CMakeLists.txt  Circle.cc  CodeTemplateGenerator.cc  ColorSelection.cc  Configuration.cc  ConnectedLogicModelObject.cc  DOTAttributes.cc  DeepCopyable.cc  DegateHelper.cc  DistanceFieldGenerator.cc  EMarker.cc  EMarkerEditDialog.cc  EdgeDetection.cc  ExternalMatching.cc  FileSystem.cc  FilterKernel.cc  Gate.cc  GateEditDialog.cc  GateLibraryDialog.cc  GateLibraryExporter.cc  GateLibraryImporter.cc  GatePort.cc  GateTemplate.cc  GateTemplateListWidget.cc  Globals.h  ImageReaderFactory.cc  ImageRenderer.cc  Importer.cc  Layer.cc  LayersEditDialog.cc  LayersEditWidget.cc  Line.cc  LogicModelDOTExporter.cc  LogicModelExporter.cc  LogicModelHelper.cc  LogicModelImporter.cc  (+49 more)
src/Core/: Annotation.cc  AutoNameGates.cc  BinaryLineDetection.cc  BoundingBox.cc  CannyEdgeDetection.cc  Circle.cc  CodeTemplateGenerator.cc  Configuration.cc  Configuration.h  ConnectedLogicModelObject.cc  DOTAttributes.cc  DOTExporter.cc  DeepCopyable.cc  DegateHelper.cc  EMarker.cc  ERCNet.cc  ERCOpenPorts.cc  EdgeDetection.cc  ExternalMatching.cc  FileSystem.cc  FilterKernel.cc  Gate.cc  GateLibrary.cc  GateLibraryExporter.cc  GateLibraryImporter.cc  GatePort.cc  GateTemplate.cc  ImageReaderFactory.cc  ImageRenderer.cc  Importer.cc  IrregularGrid.cc  Layer.cc  Line.cc  LogicModel.cc  LogicModelDOTExporter.cc  LogicModelExporter.cc  LogicModelHelper.cc  LogicModelImporter.cc  LogicModelObjectBase.cc  Module.cc  (+28 more)
src/Core/DOT/: DOTAttributes.cc  DOTAttributes.h  (+4 more)
src/GUI/: AnnotationEditDialog.cc  ColorSelection.cc  DistanceFieldGenerator.cc  EMarkerEditDialog.cc  GateEditDialog.cc  GateLibraryDialog.cc  GateTemplateListWidget.cc  LayersEditDialog.cc  LayersEditWidget.cc  MainWindow.cc  MainWindow.h  NewProjectDialog.cc  PortPlacementDialog.cc  PortPlacementWidget.cc  PreferencesDialog.cc  PreferencesEditor.cc  PreferencesHandler.cc  SelectGateTemplateDialog.cc  SubProjectAnnotation.cc  TerminalDialog.cc  Text.cc  ThemeManager.cc  ThemePickerWidget.cc  ViaEditDialog.cc  WorkspaceAnnotations.cc  WorkspaceBackground.cc  WorkspaceEMarkers.cc  WorkspaceElement.cc  WorkspaceGates.cc  WorkspaceRenderer.cc  WorkspaceSelectionTool.cc  WorkspaceVias.cc  WorkspaceWireTool.cc  WorkspaceWires.cc
tests/: CMakeLists.txt
tests/catch2/: catch.hpp
tests/src/: FileSystemTests.cc  GateLibraryExporterTests.cc  GateLibraryImporterTests.cc  ImageProcessingTests.cc  ImageTests.cc  LogicModelDOTExporterTests.cc  LogicModelImporterTests.cc  LogicModelTests.cc  MainTests.cc  MemoryMapTests.cc  ProjectExporterTests.cc  ProjectImporterTests.cc  QuadTreeTests.cc  ScalingManagerTests.cc  ShapeTests.cc
tests/tests_files/: layout_gate_placement.dot  logic_model_graph.dot  test_file.tif
tools/gate_lib_documentation/: CMakeLists.txt  gate_lib_doc.cc  gate_lib_documentation.pl  test.sh
(+816 files in other folders)
